--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-pug": "^1.1.1",
     "firebase": "^5.9.4",
     "firebaseui": "^3.5.2",
+    "geolib": "^3.3.1",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.12.0",
     "pug": "^2.0.4",
@@ -26,6 +27,7 @@
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.0.3",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
